Refactor filtering functionality by adding option entities